# ml-market

./: .gitignore  Makefile  README.md  TESTING.md  main_notebook.ipynb  pyproject.toml  pytest.ini  requirements.txt  writeup.md
docs/: data-leakage-audit.md  feature-ref.md  features.md
notebooks/: data.ipynb  main.ipynb  random_forest_test.ipynb  test.ipynb
reports/: writeup.md
scripts/: test.py
src/: data.py
src/ml_market/: __init__.py  data.py  features.py
test/: main.ipynb  model.py
tests/: __init__.py  conftest.py  test_data.py  test_features.py  test_model.py
tmp/: _test.ipynb  data.py
