[project]
name = "ml-market"
version = "0.1.0"
description = "Machine learning on stock market data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.7",
    "lightgbm>=4.6.0",
    "xgboost>=3.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_market"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
